# CircleBattleRoyale

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  QUICKSTART.md  README.md  build.bat  build.sh  run.bat  setup_dependencies.bat  setup_dependencies.sh
.kiro/specs/cuda-battle-royale-sim/: design-optimizations.md  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
assets/: README.md
config/: bias.txt  config.txt  damage_scaling.txt
include/: collision_manager.h  config_manager.h  physics_manager.h  rendering_manager.h  texture_atlas_manager.h  ui_manager.h
shaders/: circle.frag  circle.vert
src/: collision_manager.cu  config_manager.cpp  main.cpp  physics_manager.cu  rendering_kernels.cu  rendering_manager.cpp  texture_atlas_manager.cpp  ui_manager.cpp
